# metapurge-rs

./: Cargo.toml  README.md  example.docx
src/: consts.rs  dyn_png.rs  exif.rs  jpeg.rs  load_process_write.rs  main.rs  pdf.rs  png.rs  utils.rs  xml_core.rs
src/errors/: error.rs
src/mso_x/: mod.rs  mso_x.rs  mso_x_file_name_consts.rs  mso_x_xml_core.rs
src/traits/: Container.rs  container.rs  load_process_write.rs  mod.rs
