[package]
name = "test0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
zip = "0.6"
regex = "1.10.3"
lazy_static = "1.4.0"
lopdf = { version = "0.32.0", features = ["pom_parser"] }
xmp_toolkit = "1.7.2"
native-dialog = "0.7.0"
[[bin]]
name = "test0"
path = "src/main.rs"